feat: adding deeper layering to conclusion extraction for more robust results

--- a/ResearchPaperOCR.ipynb
+++ b/ResearchPaperOCR.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -176,6 +176,9 @@
     "            cnt += 2\n",
     "        elif len(text[cnt].split()) < 3:\n",
     "            cnt +=1\n",
+    "        # for finding the end of the extract, usually we have '' and then a new title\n",
+    "        elif len(text[cnt]) == 0 and len(text[cnt+1].split()) < 3:\n",
+    "            break\n",
     "        while len(text[cnt]) > 0:\n",
     "            print(text[cnt])\n",
     "            cnt += 1\n",
@@ -186,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -221,8 +224,74 @@
     "                cnt += 1\n",
     "            elif len(text[cnt+1]) < 3:\n",
     "                cnt += 3\n",
+    "            # for finding the end of the extract, usually we have '' and then a new title\n",
+    "            elif len(text[cnt]) == 0 and len(text[cnt+1].split()) < 3:\n",
+    "                break\n",
     "            else:\n",
     "                break\n",
+    "        break\n",
+    "    else:\n",
+    "        cnt += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We consider designing games for the purpose of distinguishing among different types of players. We\n",
+      "propose a general framework and use mutual information to quantify the effectiveness. Comparing\n",
+      "with games designed by heuristics, our optimization-based designs elicit more distinctive behaviors.\n",
+      "Loss-NeutralGain-SeekingLoss-AverseLoss-NeutralGain-SeekingLoss-Averse\f",
+      "Our behavior-diagnostic game design framework can be applied to various applications, with player\n",
+      "space, game space and interaction model instantiated by domain-speciﬁc ones. For example, [22]\n",
+      "studies how to generate games for the purpose of differentiating players using player performance\n",
+      "instead of behavior trajectory as the observation space. In addition, we have considered the case\n",
+      "when the player traits inferred from their game playing behavior are stationary. However, as pointed\n",
+      "out by [26, 27, 4], there can be complex relationships between players’ in-game and outside-game\n",
+      "personality traits. In future work, we look forward to addressing this distribution shift.\n"
+     ]
+    }
+   ],
+   "source": [
+    "cnt = 0\n",
+    "while cnt < len(text):\n",
+    "    if \"conclusion\" in text[cnt].lower() and len(text[cnt].split()) < 10:\n",
+    "        # skip over blank lines\n",
+    "        if len(text[cnt+1]) == 0:\n",
+    "            cnt += 2\n",
+    "        # otherwise move to next line\n",
+    "        else:\n",
+    "            cnt +=1\n",
+    "        # cleaning loop\n",
+    "        while True:\n",
+    "            # if there is text\n",
+    "            if len(text[cnt]) > 0:\n",
+    "                # if the next sentence is empty\n",
+    "                if len(text[cnt+1]) == 0:\n",
+    "                    # if 2 ahead is a page number\n",
+    "                    if len(text[cnt+2].split()) == 1:\n",
+    "                        pass\n",
+    "                    elif len(text[cnt].split()) == 1:\n",
+    "                        pass\n",
+    "                    # if 2 ahead is a title\n",
+    "                    elif len(text[cnt+2].split()) < 5:\n",
+    "                        print(text[cnt])\n",
+    "                        break\n",
+    "                # if the sentence is not a page number\n",
+    "                if len(text[cnt]) > 3:\n",
+    "                    if text[cnt].isupper():\n",
+    "                        break\n",
+    "                    elif \"references\" in text[cnt].lower().split()[:5]:\n",
+    "                        break\n",
+    "                    elif \"acknowledgement\" in text[cnt].lower():\n",
+    "                        break\n",
+    "                    print(text[cnt])\n",
+    "            cnt+=1\n",
     "        break\n",
     "    else:\n",
     "        cnt += 1"
