feat: adding more layers to ocr of abstract and conclusion

--- a/ResearchPaperOCR.ipynb
+++ b/ResearchPaperOCR.ipynb
@@ -6,82 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from wand.image import Image\n",
-    "from PIL import Image as PI\n",
-    "import pyocr\n",
-    "import pyocr.builders\n",
-    "import io"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tool = pyocr.get_available_tools()[0]\n",
-    "lang = tool.get_available_languages()[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "req_image = []\n",
-    "final_text = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image_pdf = Image(filename=\"test.pdf\", resolution=300)\n",
-    "image_jpeg = image_pdf.convert('jpeg')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for img in image_jpeg.sequence:\n",
-    "    img_page = Image(image=img)\n",
-    "    req_image.append(img_page.make_blob('jpeg'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for img in req_image: \n",
-    "    txt = tool.image_to_string(PI.open(io.BytesIO(img)),\n",
-    "                               lang=lang,\n",
-    "                               builder=pyocr.builders.TextBuilder())\n",
-    "    final_text.append(txt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "abstract = []\n",
-    "cnt = 0\n",
-    "while cnt < len(final_text):\n",
-    "    text = final_text[cnt]\n",
-    "    if \"abstract\" in text.lower():\n",
-    "        text = text.split(\"\\n\")\n",
-    "        text = [t for t in text if len(t) > 0]\n",
-    "        abstract.append(text)\n",
-    "    cnt += 1"
+    "import textract\n",
+    "import string\n",
+    "import re"
    ]
   },
   {
@@ -90,45 +17,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cnt = 0\n",
-    "final_abstract = []\n",
-    "for i in abstract:\n",
-    "    for j in i:\n",
-    "        if \"Abstract\" in j:\n",
-    "            final_abstract.append(i)\n",
-    "    cnt+=1"
+    "text = textract.process(\"test4.pdf\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if \"abstract\" in final_text[1].lower():\n",
-    "    print(\"yes\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "***"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import textract\n",
-    "text = textract.process(\"test3.pdf\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,29 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The ability to inferring latent psychological traits from human behavior is key to\n",
-      "developing personalized human-interacting machine learning systems. Approaches\n",
-      "to infer such traits range from surveys to manually-constructed experiments and\n",
-      "games. However, these traditional games are limited because they are typically\n",
-      "designed based on heuristics. In this paper, we formulate the task of designing\n",
-      "behavior diagnostic games that elicit distinguishable behavior as a mutual informa-\n",
-      "tion maximization problem, which can be solved by optimizing a variational lower\n",
-      "bound. Our framework is instantiated by using prospect theory to model varying\n",
-      "player traits, and Markov Decision Processes to parameterize the games. We vali-\n",
-      "date our approach empirically, showing that our designed games can successfully\n",
-      "distinguish among players with different traits, outperforming manually-designed\n",
-      "ones by a large margin.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "abstract = []\n",
     "cnt = 0\n",
     "while cnt < len(text):\n",
     "    if \"abstract\" in text[cnt].lower():\n",
@@ -180,7 +56,7 @@
     "        elif len(text[cnt]) == 0 and len(text[cnt+1].split()) < 3:\n",
     "            break\n",
     "        while len(text[cnt]) > 0:\n",
-    "            print(text[cnt])\n",
+    "            abstract.append(text[cnt])\n",
     "            cnt += 1\n",
     "        break\n",
     "    else:\n",
@@ -189,27 +65,207 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We consider designing games for the purpose of distinguishing among different types of players. We\n",
-      "propose a general framework and use mutual information to quantify the effectiveness. Comparing\n",
-      "with games designed by heuristics, our optimization-based designs elicit more distinctive behaviors.\n",
-      "Loss-NeutralGain-SeekingLoss-AverseLoss-NeutralGain-SeekingLoss-Averse\f",
-      "Our behavior-diagnostic game design framework can be applied to various applications, with player\n",
-      "space, game space and interaction model instantiated by domain-speciﬁc ones. For example, [22]\n",
-      "studies how to generate games for the purpose of differentiating players using player performance\n",
-      "instead of behavior trajectory as the observation space. In addition, we have considered the case\n",
-      "when the player traits inferred from their game playing behavior are stationary. However, as pointed\n",
-      "out by [26, 27, 4], there can be complex relationships between players’ in-game and outside-game\n",
-      "personality traits. In future work, we look forward to addressing this distribution shift.\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'Does progress in simulation translate to progress in robotics? Speciﬁcally, if method A outperforms method B in simulation, how likely is the trend to hold in reality on a robot?'"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "abstract_string = \"\"\n",
+    "\n",
+    "for a in abstract:\n",
+    "    if a[-1] not in string.punctuation:\n",
+    "        abstract_string += a+\" \"\n",
+    "    elif a[-1] == \"-\" or a[-1] == \"-\":\n",
+    "        abstract_string += a[:-1]\n",
+    "    elif a[-1] in string.punctuation:\n",
+    "        abstract_string += a+\" \"\n",
+    "abstract_string = abstract_string.strip()\n",
+    "\n",
+    "abstract_string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conclusion = []\n",
+    "cnt = 0\n",
+    "while cnt < len(text):\n",
+    "    if \"conclusion\" in text[cnt].lower() and len(text[cnt].split()) < 10:\n",
+    "        # skip over blank lines\n",
+    "        if len(text[cnt+1]) == 0:\n",
+    "            cnt += 2\n",
+    "        # otherwise move to next line\n",
+    "        else:\n",
+    "            cnt +=1\n",
+    "        # cleaning loop\n",
+    "        while True:\n",
+    "            # if there is text\n",
+    "            if len(text[cnt]) > 0:\n",
+    "                # if the next sentence is empty\n",
+    "                if len(text[cnt+1]) == 0:\n",
+    "                    # if 2 ahead is a page number\n",
+    "                    if len(text[cnt+2].split()) == 1:\n",
+    "                        pass\n",
+    "                    elif len(text[cnt].split()) == 1:\n",
+    "                        pass\n",
+    "                    # if 2 ahead is a title\n",
+    "                    elif len(text[cnt+2].split()) < 5:\n",
+    "                        conclusion.append(text[cnt])\n",
+    "                        break\n",
+    "                # if the sentence is not a page number\n",
+    "                if len(text[cnt]) > 3:\n",
+    "                    if text[cnt].isupper():\n",
+    "                        break\n",
+    "                    elif \"references\" in text[cnt].lower().split()[:5]:\n",
+    "                        break\n",
+    "                    elif \"acknowledgement\" in text[cnt].lower():\n",
+    "                        break\n",
+    "                    conclusion.append(text[cnt])\n",
+    "            cnt+=1\n",
+    "        break\n",
+    "    else:\n",
+    "        cnt += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'We introduce the Habitat-PyRobot Bridge (HaPy) library which allows for seamless deployment of visual navigation models across simulation (Habitat) and reality (LoCoBot). Using the Matterport scanning pipeline, Habitat stack, HaPy library, and LoCoBot we benchmark the correlation between reality and simulation performance and introduce the SRCC metric. We ﬁnd that naive simulation parameters lead to low correlation between performance in simulation and performance in reality. However, we demonstrate that the SRCC metric can be used to optimize simulation parameters and obtain high predictivity of real world performance. We hope'"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conclusion_string = \"\"\n",
+    "\n",
+    "for c in conclusion:\n",
+    "    if \"\\x0c\" in c:\n",
+    "        text = c.split(\"\\x0c\")[1:]\n",
+    "        text = \" \".join(t for t in text)\n",
+    "        conclusion_string += text+\" \"\n",
+    "    elif c[-1] not in string.punctuation:\n",
+    "        conclusion_string += c+\" \"\n",
+    "    elif c[-1] == \"-\" or c[-1] == \"-\":\n",
+    "        conclusion_string += c[:-1]\n",
+    "    elif c[-1] in string.punctuation:\n",
+    "        conclusion_string += c+\" \"\n",
+    "        \n",
+    "# filter out sentences that have 'Figure' in them\n",
+    "conclusion_string2 = re.sub(\"Figure\", \".|$|\", conclusion_string)\n",
+    "conclusion_string2 = re.sub(\"Fig.\", \".|$|\", conclusion_string2)\n",
+    "conclusion_string2 = re.sub(\"Fig\", \".|$|\", conclusion_string2)\n",
+    "conclusion_string2 = re.sub(\"\\d[.]\", \"\", conclusion_string2)\n",
+    "conclusion_string2 = conclusion_string2.split(\".|\")\n",
+    "\n",
+    "conclusion_string_final = \"\"\n",
+    "\n",
+    "for c in conclusion_string2:\n",
+    "    if \"$|\" in c:\n",
+    "        if \". \" in c:\n",
+    "            text = c.split(\". \")\n",
+    "            if text[1][0].islower():\n",
+    "                new_text = \". \".join(t for t in text[1:]).strip()\n",
+    "                conclusion_string_final += new_text+\" \"\n",
+    "        else:\n",
+    "            pass\n",
+    "    else:\n",
+    "        conclusion_string_final += c\n",
+    "\n",
+    "conclusion_string_final = conclusion_string_final.strip()\n",
+    "conclusion_string_final"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['$| 9 shows this optimized SRCC, for success rate (right) and SPL (left)',\n",
+       " 'We see a remarkable alignment in the SPL scatter-plot (left) – nearly all models lie close to the diagonal, suggesting that we fairly accurately predict how a model is going to perform on the robot by testing in simulation',\n",
+       " 'Recall that the former takes 45 hours hinav Gupta, and Ali Farhadi',\n",
+       " 'AI2-THOR: An Interactive 3D Environment for Visual AI',\n",
+       " 'arXiv, 201 2, 3, 8 [9] Fereshteh Sadeghi and Sergey Levine',\n",
+       " 'CAD2RL: real singleimage ﬂight without a single real image',\n",
+       " 'In Robotics: Science and Systems XIII, Massachusetts Institute of Technology, Cambridge, Massachusetts, USA, July 12-16, 2017, 201 2, [10] Manolis Savva, Angel X',\n",
+       " 'Chang, Alexey Dosovitskiy, Thomas Funkhouser, and Vladlen Koltun',\n",
+       " 'MINOS: Multimodal indoor simulator for navigation in complex environments',\n",
+       " 'arXiv:17103931, 201 2, 8 [11] Peter Anderson, Qi Wu, Damien Teney, Jake Bruce, Mark Johnson, Niko Sünderhauf, Ian Reid, Stephen Gould, and Anton van den Hengel',\n",
+       " 'Vision-and-language navigation: Interpreting visually-grounded navigation instructions in real environments',\n",
+       " 'In Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition, pages 3674–3683, 201 2, 7 [12] Abhishek Das, Samyak Datta, Georgia Gkioxari, Stefan Lee, Devi Parikh, and Dhruv Batra',\n",
+       " 'Embodied Question Answering',\n",
+       " 'In Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 201 2 [13] Visual Learning and Embodied Agents in Simulation Environments @ ECCV 201 https://eccv18-vlease',\n",
+       " 'github.io/',\n",
+       " '2 [14] Habitat Challenge 2019 @ Habitat Embodied Agents Workshop',\n",
+       " 'CVPR 201 https://aihabitat.org/ challenge/2019/',\n",
+       " '2, 4, 5, 7, 13 [15] CARLA autonomous driving challenge @ CVPR 201 ']"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "cnt = 0\n",
     "while cnt < len(text):\n",
@@ -233,76 +289,6 @@
     "    else:\n",
     "        cnt += 1"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 141,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We consider designing games for the purpose of distinguishing among different types of players. We\n",
-      "propose a general framework and use mutual information to quantify the effectiveness. Comparing\n",
-      "with games designed by heuristics, our optimization-based designs elicit more distinctive behaviors.\n",
-      "Loss-NeutralGain-SeekingLoss-AverseLoss-NeutralGain-SeekingLoss-Averse\f",
-      "Our behavior-diagnostic game design framework can be applied to various applications, with player\n",
-      "space, game space and interaction model instantiated by domain-speciﬁc ones. For example, [22]\n",
-      "studies how to generate games for the purpose of differentiating players using player performance\n",
-      "instead of behavior trajectory as the observation space. In addition, we have considered the case\n",
-      "when the player traits inferred from their game playing behavior are stationary. However, as pointed\n",
-      "out by [26, 27, 4], there can be complex relationships between players’ in-game and outside-game\n",
-      "personality traits. In future work, we look forward to addressing this distribution shift.\n"
-     ]
-    }
-   ],
-   "source": [
-    "cnt = 0\n",
-    "while cnt < len(text):\n",
-    "    if \"conclusion\" in text[cnt].lower() and len(text[cnt].split()) < 10:\n",
-    "        # skip over blank lines\n",
-    "        if len(text[cnt+1]) == 0:\n",
-    "            cnt += 2\n",
-    "        # otherwise move to next line\n",
-    "        else:\n",
-    "            cnt +=1\n",
-    "        # cleaning loop\n",
-    "        while True:\n",
-    "            # if there is text\n",
-    "            if len(text[cnt]) > 0:\n",
-    "                # if the next sentence is empty\n",
-    "                if len(text[cnt+1]) == 0:\n",
-    "                    # if 2 ahead is a page number\n",
-    "                    if len(text[cnt+2].split()) == 1:\n",
-    "                        pass\n",
-    "                    elif len(text[cnt].split()) == 1:\n",
-    "                        pass\n",
-    "                    # if 2 ahead is a title\n",
-    "                    elif len(text[cnt+2].split()) < 5:\n",
-    "                        print(text[cnt])\n",
-    "                        break\n",
-    "                # if the sentence is not a page number\n",
-    "                if len(text[cnt]) > 3:\n",
-    "                    if text[cnt].isupper():\n",
-    "                        break\n",
-    "                    elif \"references\" in text[cnt].lower().split()[:5]:\n",
-    "                        break\n",
-    "                    elif \"acknowledgement\" in text[cnt].lower():\n",
-    "                        break\n",
-    "                    print(text[cnt])\n",
-    "            cnt+=1\n",
-    "        break\n",
-    "    else:\n",
-    "        cnt += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
