feat: trying out tesseract

--- a/ResearchPaperOCR2.ipynb
+++ b/ResearchPaperOCR2.ipynb
@@ -13,16 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = textract.process(\"test3.pdf\")"
+    "text = textract.process(\"test5.pdf\", method=\"tesseract\", language=\"eng\")\n",
+    "#text = textract.process(\"test.pdf\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,16 +32,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = text.split(\"\\n\")"
+    "text = text.split(\"\\n\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,16 +49,22 @@
     "cnt = 0\n",
     "while cnt < len(text):\n",
     "    if \"abstract\" in text[cnt].lower():\n",
-    "        if len(text[cnt+1]) == 0:\n",
-    "            cnt += 2\n",
-    "        elif len(text[cnt].split()) < 3:\n",
-    "            cnt +=1\n",
-    "        # for finding the end of the extract, usually we have '' and then a new title\n",
-    "        elif len(text[cnt]) == 0 and len(text[cnt+1].split()) < 3:\n",
-    "            break\n",
-    "        while len(text[cnt]) > 0:\n",
-    "            abstract.append(text[cnt])\n",
+    "        if \"abstract\" in text[cnt].lower() and len(text[cnt].split()) < 10:\n",
     "            cnt += 1\n",
+    "        while True:\n",
+    "            if \"*\" in text[cnt] and len(text[cnt].split()) < 10:\n",
+    "                cnt += 1\n",
+    "            elif len(text[cnt].split()) > 10:\n",
+    "                abstract.append(text[cnt])\n",
+    "                cnt +=1\n",
+    "            elif len(text[cnt].split()) == 1:\n",
+    "                try:\n",
+    "                    int(text[cnt])\n",
+    "                except:\n",
+    "                    break\n",
+    "                break\n",
+    "            else:\n",
+    "                break\n",
     "        break\n",
     "    else:\n",
     "        cnt += 1"
@@ -65,16 +72,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'The ability to inferring latent psychological traits from human behavior is key to developing personalized human-interacting machine learning systems. Approaches to infer such traits range from surveys to manually-constructed experiments and games. However, these traditional games are limited because they are typically designed based on heuristics. In this paper, we formulate the task of designing behavior diagnostic games that elicit distinguishable behavior as a mutual information maximization problem, which can be solved by optimizing a variational lower bound. Our framework is instantiated by using prospect theory to model varying player traits, and Markov Decision Processes to parameterize the games. We validate our approach empirically, showing that our designed games can successfully distinguish among players with different traits, outperforming manually-designed ones by a large margin.'"
+       "'We determine the main properties of the Galactic binary black hole (BBH) population detectable by LISA and strategies to distinguish them from the much more numerous white dwarf binaries. We simulate BBH populations based on cosmological simulations of Milky Way-like galaxies and binary evolution models. We then determine their gravitational wave emission as observed by LISA and build mock catalogs. According to our model LISA will detect ~ 4(6) binary black holes assuming 4(10) years of operations. Those figures grow to ~ 6(9) when models are re-normalized to the inferred LIGO/Virgo merger rates. About 40%(70%) of the sources will have a good enough chirp mass measurement to separate them from the much lighter white dwarf and neutron star binaries. Most of the remaining sources should be identifiable by their lack of electromagnetic counterpart within ~ 100 pc. These results are robust with respect to the current uncertainties of the BBH merger rate as measured by LIGO/Virgo as well as the global mass spectrum of the binaries. We determine there is a 94 per cent chance that LISA finds at least one of these systems, which will allow us to pinpoint the conditions where they were formed and possibly find unique electromagnetic signatures.'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,12 +90,20 @@
     "abstract_string = \"\"\n",
     "\n",
     "for a in abstract:\n",
+    "    a = re.sub(\"-\\n\", \"\", a)\n",
+    "    a = re.sub(\"\\n\", \" \", a)\n",
     "    if a[-1] not in string.punctuation:\n",
     "        abstract_string += a+\" \"\n",
     "    elif a[-1] == \"-\" or a[-1] == \"-\":\n",
     "        abstract_string += a[:-1]\n",
     "    elif a[-1] in string.punctuation:\n",
     "        abstract_string += a+\" \"\n",
+    "\n",
+    "if \"abstract\" in abstract_string[:8].lower():\n",
+    "    abstract_string = abstract_string[8:]\n",
+    "if abstract_string[:1] in string.punctuation or abstract_string[:1] == \"—\":\n",
+    "    abstract_string = abstract_string[1:]\n",
+    "\n",
     "abstract_string = abstract_string.strip()\n",
     "\n",
     "abstract_string"
@@ -96,20 +111,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "conclusion = []\n",
+    "summary = []\n",
     "cnt = 0\n",
     "while cnt < len(text):\n",
-    "    if \"conclusion\" in text[cnt].lower() and len(text[cnt].split()) < 10:\n",
-    "        # skip over blank lines\n",
-    "        if len(text[cnt+1]) == 0:\n",
-    "            cnt += 2\n",
-    "        # otherwise move to next line\n",
-    "        else:\n",
-    "            cnt +=1\n",
+    "    if \"conclusion\" in text[cnt].lower() and len(text[cnt].split()) < 10 or \". Conclusion\" in text[cnt]:\n",
+    "        cnt +=1\n",
     "        # cleaning loop\n",
     "        while True:\n",
     "            # if there is text\n",
@@ -127,9 +138,9 @@
     "                        break\n",
     "                # if the sentence is not a page number\n",
     "                if len(text[cnt]) > 3:\n",
-    "                    if text[cnt].isupper():\n",
-    "                        break\n",
-    "                    elif \"references\" in text[cnt].lower().split()[:5]:\n",
+    "                    #if text[cnt].isupper():\n",
+    "                    #    break\n",
+    "                    if \"references\" in text[cnt].lower().split()[:5]:\n",
     "                        break\n",
     "                    elif \"acknowledgement\" in text[cnt].lower():\n",
     "                        break\n",
@@ -142,16 +153,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'We consider designing games for the purpose of distinguishing among different types of players. We propose a general framework and use mutual information to quantify the effectiveness. Comparing with games designed by heuristics, our optimization-based designs elicit more distinctive behaviors. Our behavior-diagnostic game design framework can be applied to various applications, with player space, game space and interaction model instantiated by domain-speciﬁc ones. For example, [22] studies how to generate games for the purpose of differentiating players using player performance instead of behavior trajectory as the observation space. In addition, we have considered the case when the player traits inferred from their game playing behavior are stationary. However, as pointed out by [26, 27, 4], there can be complex relationships between players’ in-game and outside-game personality traits. In future work, we look forward to addressing this distribution shift.'"
+       "'We base our study on the BBHs found in the three MW equivalent galaxies, which have a BBH merger rate ~ 8 x 10-6yr“!. Assuming a MW-equivalent volume density of 005 Mpe~> (Tomezak et al. 2014), this results in a BBH merger rate at z = 0 of 40 yr! Gpe™3, which is con: tent with the measured LIGO-Virgo rate of 53*38yr-! Gpe (Abbott et al. 2019b). To fold into our calculation the uncertanties in the measured BBH rate, we convolve the distribution of expected detections with the posterior distribution of the LIGO/Virgo merger rate.'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,6 +171,8 @@
     "conclusion_string = \"\"\n",
     "\n",
     "for c in conclusion:\n",
+    "    c = re.sub(\"-\\n\", \"\", c)\n",
+    "    c = re.sub(\"\\n\", \" \", c)\n",
     "    if \"\\x0c\" in c:\n",
     "        text = c.split(\"\\x0c\")[1:]\n",
     "        text = \" \".join(t for t in text)\n",
@@ -209,49 +222,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cnt = 0\n",
-    "while cnt < len(text):\n",
-    "    if \"conclusion\" in text[cnt].lower() and len(text[cnt].split()) < 10:\n",
-    "        if len(text[cnt+1]) == 0:\n",
-    "            cnt += 2\n",
-    "        else:\n",
-    "            cnt +=1\n",
-    "        while True:\n",
-    "            if len(text[cnt]) > 0:\n",
-    "                print(text[cnt])\n",
-    "                cnt += 1\n",
-    "            elif len(text[cnt+1]) < 3:\n",
-    "                cnt += 3\n",
-    "            # for finding the end of the extract, usually we have '' and then a new title\n",
-    "            elif len(text[cnt]) == 0 and len(text[cnt+1].split()) < 3:\n",
-    "                break\n",
-    "            else:\n",
-    "                break\n",
-    "        break\n",
-    "    else:\n",
-    "        cnt += 1"
-   ]
   }
  ],
  "metadata": {
